Added scanner for wave1 pass all test